--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon index.js",
+    "dev": "nodemon index.js",
     "start": "SET NODE_ENV=production & node index.js"
   },
   "repository": {
@@ -22,6 +22,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
+    "cloudinary": "^2.6.0",
     "colors": "^1.4.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -38,6 +39,7 @@
     "nodemailer": "^6.7.2",
     "sharp": "^0.33.5",
     "slugify": "^1.6.3",
+    "streamifier": "^0.1.1",
     "stripe": "^8.210.0",
     "uuid": "^8.3.2"
   },
